--- a/ubuntu_withlibs_cpu/requirements-conda-cpu.yml
+++ b/ubuntu_withlibs_cpu/requirements-conda-cpu.yml
@@ -1,10 +1,10 @@
 name: iobjectspy-cpu
 channels:
-  - conda-forge
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
-    - numpy=1.15.0
+    - numpy=1.17.2
     - pandas=0.23.3
     - pandas-datareader=0.6.0
     - matplotlib=3.1.0
@@ -27,4 +27,7 @@ dependencies:
         - opencv-python==4.1.1.26
         - dotmap==1.3.8 
         - crfpy
-        - rasterio
+        - geoai-gdal
+        - geoai-rasterio
+        
+
